# ragul

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  hello.ragul  index.html  mkdocs.yml  pyproject.toml  ragul.config
.github/workflows/: ci.yml  docs.yml  publish.yml
Project Documents/: project-status-report.md  ragul-future-ideas.md  ragul-game-architecture.md  ragul-spec.md  ragul-strategic-direction.md  ragul-strategic-review.md  ragul-toolchain-plan.md  ragul-updates-001.md
control/: index.html
docs/: control.md  effects.md  error-codes.md  errors.md  functions.md  glossary.md  index.md  modules.md  stdlib.md  syntax.md  tooling.md  types.md
docs/examples/: 01_hello.md  02_arithmetic.md  03_filter_sort.md  04_strings.md  05_booleans.md  06_list_operations.md  07_error_handling.md  08_json.md  09_csv.md  11_with_arguments.md  12_regex_patterns.md  13_terminal_game.md  14_date.md  hello.md  pipeline.md
effects/: index.html
error-codes/: index.html
errors/: index.html
examples/: 02_arithmetic.ragul  03_filter_sort.ragul  07_error_handling.ragul
examples/01_hello/: index.html
examples/02_arithmetic/: index.html
examples/03_filter_sort/: index.html
examples/04_strings/: index.html
examples/05_booleans/: index.html
examples/06_list_operations/: index.html
examples/07_error_handling/: index.html
examples/08_json/: index.html
examples/09_csv/: index.html
examples/11_with_arguments/: index.html
examples/12_regex_patterns/: index.html
examples/13_terminal_game/: index.html
examples/14_date/: index.html
examples/en/: 01_hello.ragul  02_arithmetic.ragul  03_filter_sort.ragul  04_strings.ragul  05_booleans.ragul  06_list_operations.ragul  08_json.ragul  (+11 more)
functions/: index.html
glossary/: index.html
modules/: index.html
ragul/: config.py  errors.py  interpreter.py  lexer.py  main.py  model.py  parser.py  typechecker.py
search/: search_index.json
stdlib/: index.html
syntax/: index.html
tooling/: index.html
tools/: diagnose_console.py  game_frames.txt  run_headless.py
types/: index.html
vscode-ragul/: language-configuration.json  package-lock.json  package.json  ragul-lang-0.1.0.vsix
(+57 files in other folders)
