[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "ragul-lang"
version = "0.2.0"
description = "Ragul — an agglutinative programming language"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["programming-language", "interpreter", "hungarian", "agglutinative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0",
    "pygls>=1.3",
    "prompt_toolkit>=3.0",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/kory75/ragul"
Documentation = "https://kory75.github.io/ragul"
Repository = "https://github.com/kory75/ragul"
"Bug Tracker" = "https://github.com/kory75/ragul/issues"

[project.scripts]
ragul = "ragul.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-json-report",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ragul*"]

[tool.pytest.ini_options]
testpaths = ["ragul/tests"]
python_files = ["test_*.py"]
